Add README with build/run/Appium instructions